changed admission updates to show all at a glance instead of scroll

--- a/public/admissions/index.html
+++ b/public/admissions/index.html
@@ -873,14 +873,14 @@
                   ></div>
 
                   <div
-                    class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh] mb-32 lg:mb-0"
+                    class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                   >
                     <div class="head bg-[#0369A1] text-white p-2">
                       UG Admissions (2024 - 2025)
                     </div>
-                    <div class="admission overflow-auto h-[50vh]">
+                    <div class="admission overflow-auto my-4">
                       <ul
-                        class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                        class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 overflow-y-scroll"
                         id="ug-updates"
                       >
                         <!--Admission update data coming from backend-->
@@ -1267,14 +1267,14 @@
                 ></div>
 
                 <div
-                  class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh] mb-32 lg:mb-0"
+                  class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                 >
                   <div class="head bg-[#0369A1] text-white p-2">
                     Admissions (2024 - 2025)
                   </div>
-                  <div class="admission overflow-auto h-[50vh]">
+                  <div class="admission overflow-auto my-4">
                     <ul
-                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 overflow-y-scroll"
                       id="mtech-ccmt-updates"
                     >
                       <!--Admission update data coming from backend-->
@@ -1622,14 +1622,14 @@
                 ></div>
 
                 <div
-                  class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh]mb-32 lg:mb-0"
+                  class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                 >
                   <div class="head bg-[#0369A1] text-white p-2">
                     Admissions (2024 - 2025)
                   </div>
-                  <div class="admission overflow-auto h-[50vh]">
+                  <div class="admission overflow-auto my-4">
                     <ul
-                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 overflow-y-scroll"
                       id="mtech-self-updates"
                     >
                       <!--Admission update data coming from backend-->
@@ -2006,14 +2006,14 @@
                 ></div>
 
                 <div
-                  class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh]mb-32 lg:mb-0"
+                  class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                 >
                   <div class="head bg-[#0369A1] text-white p-2">
                     Admissions (2024 - 2025)
                   </div>
-                  <div class="admission overflow-auto lg:h-[45vh] h-[45vh]">
+                  <div class="admission overflow-auto my-4">
                     <ul
-                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 overflow-y-scroll"
                       id="msc-updates"
                     >
                       <!--Admission update data coming from backend-->
@@ -2358,14 +2358,14 @@
                 ></div>
 
                 <div
-                  class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh]mb-32 lg:mb-0"
+                  class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                 >
                   <div class="head bg-[#0369A1] text-white p-2">
                     Admissions (2024 - 2025)
                   </div>
-                  <div class="admission overflow-auto h-[50vh]">
+                  <div class="admission overflow-auto my-4">
                     <ul
-                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 verflow-y-scroll"
                       id="mba-updates"
                     >
                       <!--Admission update data coming from backend-->
@@ -2740,14 +2740,14 @@
                 ></div>
 
                 <div
-                  class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh] mb-32 lg:mb-0"
+                  class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                 >
                   <div class="head bg-[#0369A1] text-white p-2">
                     Admissions (2024 - 2025)
                   </div>
-                  <div class="admission overflow-auto h-[50vh]">
+                  <div class="admission overflow-auto my-4">
                     <ul
-                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 overflow-y-scroll"
                       id="phd-updates"
                     >
                       <!--Admission update data coming from backend-->
@@ -3291,14 +3291,14 @@
                 ></div>
 
                 <div
-                  class="right w-[100%] font-sans mt-8 lg:h-[50vh] h-[50vh]mb-32 lg:mb-0"
+                  class="right w-[100%] font-sans mt-8 lg:h-full h-full mb-32 lg:mb-0"
                 >
                   <div class="head bg-[#0369A1] text-white p-2">
                     Admissions (2024 - 2025)
                   </div>
-                  <div class="admission overflow-auto h-[50vh]">
+                  <div class="admission overflow-auto my-4">
                     <ul
-                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2"
+                      class="text-[14px] leading-5 ml-[2%] text-left space-y-2 my-2 overflow-y-scroll"
 
                       id="bscbed-updates"
 
